--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,12 +10,27 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.C196_PA">
         <activity
-            android:name="UI.TermDetail"
+            android:name="UI.CourseDetail"
             android:exported="false" />
+        <activity
+            android:name="UI.CourseList"
+            android:exported="false"
+            android:label="Course List"
+            android:parentActivityName="UI.MainActivity" />
+        <activity
+            android:name="UI.AddTerm"
+            android:exported="false"
+            android:label="Add Term"
+            android:parentActivityName="UI.TermList" />
+        <activity
+            android:name="UI.TermDetail"
+            android:exported="false"
+            android:label="Term Detail"
+            android:parentActivityName="UI.TermList" />
         <activity
             android:name="UI.TermList"
             android:exported="false"
-            android:label="Terms"
+            android:label="Term List"
             android:parentActivityName="UI.MainActivity" />
         <activity
             android:name="UI.MainActivity"
