--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.C196_PA">
+        <activity
+            android:name="UI.AssociateCourse"
+            android:exported="false"
+            android:label="Associate Course"
+            android:parentActivityName="UI.TermDetail"/>
+
         <receiver
             android:name="UI.MyReceiver"
             android:enabled="true"
-            android:exported="true"></receiver>
+            android:exported="true" />
 
         <activity
             android:name="UI.CourseDetail"
